http://inter-mediator.org/
=================================

Change Log will be supplied by English only.
Latest changes might exist on the GitHub repository.
Please check: https://github.com/INTER-Mediator/INTER-Mediator
Also the Migration Guide (Japanese) might be informative:
  http://inter-mediator.info/ja/for-developers/migration.html

Ver.5.6 (in development)
- In the Post Only mode, radio buttons don't require to set the name attribute. The nodes having the
  same data-im attribute automatically set the appropriate name attributes.
- New interleave method INTERMediatorOnPage.modifyPostOnlyContext is defined. The parameter is post only
  context definition and should return a context definition which is modified or not.
- For preventing to update by editing element's value, data-im-control="unbind" is introduced. This attribute
  causes just assign the field value to checkbox, but it doesn't happen to update with clicking it.
- Added titles to almost all sample HTML files.
- Update recipe.rb and sample_spec.rb for the INTER-Mediator-Server VM
- The access privilege of directories and file of uploaded file set to 755. Previously it was 744, but
  a rental server which is limited feature tries to prevent to set all bits of group/other.
- [BUG FIX] IMLibContext class's getDataAtLastRecord method had a bug (wrong parameters for getValue).
- [BUG FIX] MediaAccess class didn't work for privileged access with users.
- [BUG FIX] INTERMediator.partialConstructing property wasn't appropriate value in doAfterProcessing method.
- [BUG FIX] Customized button names on the pagination control didn't work correctly.
- [BUG FIX] The INTERMediatorOnPage.doBeforeConstruct method won't be called other than just after page loaded.
- [BUG FIX] INTERMediator.clearCondition sometimes clears all condition if a parameter is set.
- [BUG FIX] MySQL PDO driver holds the keyword of SQL with quote characters.