@@ -19,46 +19,53 @@
     <script type="text/javascript" src="search_def.php"></script>
 </head>
 <body>
-<h1>検索機能のサンプル（設定のみで実現）</h1>
-<div>
+<header>
+  <p class="logo"><img src="../images/logo_t-100.png" alt=""></p>
+</header>
+<div id="wrapper">
+  <h1>検索機能のサンプル（設定のみで実現）</h1>
+  <div>
     検索条件:
     <input type="text" data-im="_@condition:postalcode:f3,f7,f8,f9:*match*">
     表示件数：
     <select type="text" data-im="_@limitnumber:postalcode">
-        <option value="4">4</option>
-        <option value="10">10</option>
-        <option value="20" selected>20</option>
-    </select>
+      <option value="4">4</option>
+      <option value="10">10</option>
+      <option value="20" selected>20</option>
+      </select>
     <button data-im="_@update:postalcode">search</button>
-</div>
-<div id="IM_NAVIGATOR">Navigation Controls by INTER-Mediator</div>
-<table border="1" id="resultTable">
+  </div>
+  <div id="IM_NAVIGATOR">Navigation Controls by INTER-Mediator</div>
+  <table border="1" id="resultTable">
     <thead>
-    <tr>
+      <tr>
         <th>郵便番号
-            <span style="cursor: pointer" data-im="_@addorder:postalcode:f3:asc">▲</span>
-            <span style="cursor: pointer" data-im="_@addorder:postalcode:f3:desc">▼</span>
-        </th>
+          <span style="cursor: pointer" data-im="_@addorder:postalcode:f3:asc">▲</span>
+          <span style="cursor: pointer" data-im="_@addorder:postalcode:f3:desc">▼</span>
+          </th>
         <th>都道府県</th>
         <th>市区町村</th>
         <th>町域名
-            <span style="cursor: pointer" data-im="_@addorder:postalcode:f9:asc">▲</span>
-            <span style="cursor: pointer" data-im="_@addorder:postalcode:f9:desc">▼</span>
-        </th>
-    </tr>
-    </thead>
+          <span style="cursor: pointer" data-im="_@addorder:postalcode:f9:asc">▲</span>
+          <span style="cursor: pointer" data-im="_@addorder:postalcode:f9:desc">▼</span>
+          </th>
+      </tr>
+      </thead>
     <tbody>
-    <tr>
+      <tr>
         <td><div data-im="postalcode@f3"></div></td>
         <td><div data-im="postalcode@f7"></div></td>
         <td><div data-im="postalcode@f8"></div></td>
         <td><div data-im="postalcode@f9"></div></td>
-    </tr>
-    <tr data-im-control="noresult">
+      </tr>
+      <tr data-im-control="noresult">
         <td colspan="4">検索結果はありません。あるいは検索前です。</td>
-    </tr>
-    </tbody>
-</table>
-
+      </tr>
+      </tbody>
+  </table>
+</div>
+<footer>
+<small>INTER-Mediator ©2016</small>
+</footer>
 </body>
 </html>
