@@ -24,9 +24,13 @@
     </script>
 </head>
 <body>
+<header>
+  <p class="logo"><img src="../images/logo_t-100.png" alt=""></p>
+</header>
+<div id="wrapper">
 <h1>Post-Onlyモードでの入力結果を参照するページ</h1>
 <div id="IM_NAVIGATOR"></div>
-<table border="1">
+<table>
     <thead>
     <tr><th>Q1</th><th>Q2</th><th>Q3</th><th>Q4</th><th>Q5</th></tr>
     </thead>
@@ -40,6 +44,9 @@
     </tr>
     </tbody>
 </table>
-
+</div>
+<footer>
+<small>INTER-Mediator ©2016</small>
+</footer>
 </body>
 </html>
