@@ -13,7 +13,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" type="text/css" href="../sample.css">
+    <link rel="stylesheet" type="text/css" href="include_MySQL.php?themes=default&type=css">
     <title>INTER-Mediator - Sample - Search for Debugging/MySQL</title>
     <script type="text/javascript" src="include_MySQL.php"></script>
     <script type="text/javascript" src="search.js"></script>
