@@ -11,6 +11,10 @@ Also the Migration Guide (Japanese) might be informative:
   http://inter-mediator.info/ja/for-developers/migration.html
 
 Ver.5.6 (in development)
+- Well-designed CSS files are added by Yuko Oki. She is web designer and a lecturer of
+  Kyoto University of Art and Design.
+- Themes can be retrieved from accessing the definition file as below:
+  def_file.php?themes=default&type=css&name=style.css
 - In the Post Only mode, radio buttons don't require to set the name attribute. The nodes having the
   same data-im attribute automatically set the appropriate name attributes.
 - New interleave method INTERMediatorOnPage.modifyPostOnlyContext is defined. The parameter is post only
